deployment/prod/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: master
  name: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: master
    spec:
      containers:
      - name: master
        image: julesyoungberg/distributed-evolution-master
        imagePullPolicy: ""
        ports:
        - containerPort: 9000
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/healthz
            port: 9000
        resources:
          requests:
            cpu: 0.8
            memory: 100Mi
          limits:
            cpu: 1
            memory: 500Mi
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
