deployment/prod/sentinel-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-replica
  labels:
    app: sentinel-replica
spec:
  selector:
    matchLabels:
      app: sentinel-replica
  replicas: 2
  template:
    metadata:
      labels:
        app: sentinel-replica
    spec:
      containers:
      - name: replica
        image: julesyoungberg/distributed-evolution-sentinel-replica
        ports:
          - name: redis-sentinel
            containerPort: 26379
        resources:
          requests:
            cpu: 0.2
            memory: 500Mi
          limits:
            cpu: 0.4
            memory: 1000Mi
