deployment/prod/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: worker
  name: worker
spec:
  replicas: 6
  selector:
    matchLabels:
      app: worker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: julesyoungberg/distributed-evolution-worker
        imagePullPolicy: ""
        resources:
          requests:
            cpu: 2.5
            memory: 500Mi
          limits:
            cpu: 3
            memory: 1000Mi
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
