deployment/prod/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: master
  name: master
spec:
  type: LoadBalancer
  selector:
    app: master
  ports:
  - name: http
    port: 80
    targetPort: 9000
  - name: rpc
    port: 8080
    targetPort: 8080
status:
  loadBalancer: {}
