deployment/prod/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          serviceName: master
          servicePort: 80
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
